# MyUiFramework

./: CMakeLists.txt  LICENSE  README.md
demo/: CMakeLists.txt  icon.qrc  main.cpp  qml.qrc
demo/qml/: BusyIndicatorDemo.qml  ButtonDemo.qml  IconDemo.qml  main.qml
src/: CMakeLists.txt
src/MyUiFramework/: CMakeLists.txt  MyUiFramework.cpp  MyUiFramework.h  MyUiFramework_global.h  controls.qrc
src/MyUiFramework/com/my/controls/: BusyIndicator.qml  Button.qml  Icon.qml  qmldir
src/MyUiFramework/style/: ButtonType.h  MyAbstractStyle.h
src/MyUiFramework/style/classic/: MyClassicStyle.h
src/MyUiFramework/style/classic/palette/: ClassicBusyIndicatorPalette.cpp  ClassicBusyIndicatorPalette.h  ClassicButtonPalette.cpp  ClassicButtonPalette.h  ClassicIconPalette.cpp  ClassicIconPalette.h  ClassicStyleColors.h
src/MyUiFramework/style/modern/: MyModernStyle.h
src/MyUiFramework/style/modern/palette/: ModernBusyIndicatorPalette.cpp  ModernBusyIndicatorPalette.h  ModernButtonPalette.cpp  ModernButtonPalette.h  ModernIconPalette.cpp  ModernIconPalette.h  ModernStyleColors.h
src/MyUiFramework/style/palette/: AbstractBusyIndicatorPalette.h  AbstractButtonPalette.h  AbstractIconPalette.h
